# safeharbor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py  config.py  main.py
backend/db/: __init__.py  session.py
backend/middleware/: audit_log.py  rate_limit.py  rbac.py
backend/models/: __init__.py  api_key.py  base.py  calculation_run.py  compliance_vault.py  employee.py  employee_calculation.py  integration.py  organization.py  ttoc_classification.py  user.py
backend/routers/v1/: __init__.py  admin.py  auth.py  calculations.py  compliance.py  employees.py  integrations.py  organizations.py  sso.py
backend/schemas/: __init__.py  auth.py  calculation.py  employee.py  organization.py
backend/services/: auth.py  cache.py  email.py  retro_audit.py  sso.py  writeback_engine.py
compliance_vault/: __init__.py  export.py  integrity.py  ledger.py  pdf_generator.py  retention.py
engines/: __init__.py  server.py
engines/schemas/: __init__.py  occupation.py  phase_out.py  premium_engine.py
engines/services/: __init__.py  llm_client.py  magi_tracker.py  regular_rate_calculator.py  ttoc_classifier.py
engines/tools/: __init__.py  occupation_ai.py  phase_out_filter.py  premium_engine.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/approvals/: page.tsx
frontend/src/app/calculations/: page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/app/integrations/: page.tsx
frontend/src/types/: index.ts
integrations/: __init__.py  base.py  oauth_manager.py
integrations/hris/: __init__.py  bamboohr.py  rippling.py
integrations/payroll/: __init__.py  adp.py  gusto.py  paychex.py  quickbooks_payroll.py
integrations/pos/: __init__.py  clover.py  square.py  toast.py
integrations/timekeeping/: __init__.py  deputy.py
migrations/: env.py
migrations/versions/: 2025_01_01_a001_initial_schema.py
scripts/: security_scan.sh  seed.py  start.sh
tests/: __init__.py  conftest.py  factories.py
tests/integration/: test_api_auth.py  test_api_crud.py
tests/security/: test_tenant_isolation.py
tests/unit/backend/: test_auth_service.py  test_rbac.py  test_retro_audit.py  test_writeback_engine.py
tests/unit/compliance_vault/: test_integrity.py
tests/unit/engines/: test_phase_out.py  test_premium_engine.py
workers/: __init__.py  celery_app.py
workers/tasks/: calculation_tasks.py  compliance_tasks.py  notification_tasks.py  sync_tasks.py
(+21 files in other folders)
